Clean up semantic chunking file

--- a/Week 4/Day 2/Semantic_Chunking.ipynb
+++ b/Week 4/Day 2/Semantic_Chunking.ipynb
@@ -1,45 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 🚧 BONUS CHALLENGE 🚧\n",
-    "\n",
-    "> NOTE: Completing this challenge will provide full marks on the assignment, regardless of the complete of the notebook. You do not need to complete this in the notebook for full marks.\n",
-    "\n",
-    "##### **MINIMUM REQUIREMENTS**:\n",
-    "\n",
-    "1. Baseline `LCEL RAG` Application using `NAIVE RETRIEVAL`\n",
-    "2. Baseline Evaluation using `RAGAS METRICS`\n",
-    "  - [Faithfulness](https://docs.ragas.io/en/stable/concepts/metrics/faithfulness.html)\n",
-    "  - [Answer Relevancy](https://docs.ragas.io/en/stable/concepts/metrics/answer_relevance.html)\n",
-    "  - [Context Precision](https://docs.ragas.io/en/stable/concepts/metrics/context_precision.html)\n",
-    "  - [Context Recall](https://docs.ragas.io/en/stable/concepts/metrics/context_recall.html)\n",
-    "  - [Answer Correctness](https://docs.ragas.io/en/stable/concepts/metrics/answer_correctness.html)\n",
-    "3. Implement a `SEMANTIC CHUNKING STRATEGY`.\n",
-    "4. Create an `LCEL RAG` Application using `SEMANTIC CHUNKING` with `NAIVE RETRIEVAL`.\n",
-    "5. Compare and contrast results.\n",
-    "\n",
-    "##### **SEMANTIC CHUNKING REQUIREMENTS**:\n",
-    "\n",
-    "Chunk semantically similar (based on designed threshold) sentences, and then paragraphs, greedily, up to a maximum chunk size. Minimum chunk size is a single sentence.\n",
-    "\n",
-    "Have fun!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's install the same libraries as the week 4 day 2 Homework\n",
+    "# Install dependencies\n",
     "!pip install -U -q langchain langchain-openai langchain_core langchain-community langchainhub openai langchain-qdrant\n",
     "!pip install -qU ragas\n",
     "!pip install -qU qdrant-client pymupdf pandas\n",
-    "\n",
-    "# And some other useful utils\n",
     "!pip install -qU nltk "
    ]
   },
@@ -64,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# And load up the same document collection to work with\n",
+    "# Load up a document to work with -- in this case, a series of blog posts about entrepreneurship\n",
     "from langchain_community.document_loaders import PyMuPDFLoader\n",
     "from pprint import pprint\n",
     "\n",
@@ -88,9 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"blue\">We don't want to have artificial page-breaks, so let's recombine those into one long document before we start semantic chunking. It also looks like pymupdfloader didn't give us a good way to distinguish between paragraphs, as every line is just separated by a newline. To avoid spending a lot of time on pdf munging, let's just strip out the newlines and treat it as one long text. \n",
-    "\n",
-    "(Note: Unstructured could probably do a better job handling these paragraphs, but I ran into dependency conflicts installing it on my laptop and didn't feel like taking the time to resolve them.)"
+    "We don't want to have artificial page-breaks, so let's recombine those into one long document before we start semantic chunking. It also looks like pymupdfloader didn't give us a good way to distinguish between paragraphs, as every line is just separated by a newline. To avoid spending a lot of time on pdf munging, let's just strip out the newlines and treat it as one long text. "
    ]
   },
   {
@@ -167,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"blue\">Now let's find semantically similar sentences. I'm going to do it a naive way, using text-embedding-ada-3 and setting a cosine similarity threshold of >0.4 for \"related\" sentences, with the threshold based on quick trial and error. This isn't the most robust method but should be fine for a proof of concept. There are plenty of other methods we could try (for example, cross encoders?)\n",
+    "Now let's find semantically similar sentences. I'm going to do it a naive way, using OpenAI's text-embedding-ada-3 and setting a cosine similarity threshold of >0.4 for \"related\" sentences, with the threshold based on quick trial and error. This isn't the most robust method but should be fine for a proof of concept. There are plenty of other methods we could try, and Langchain has several in its implementation.\n",
     "\n",
     "First, we need to get the embeddings for each sentence. \n"
    ]
@@ -210,6 +178,13 @@
     "import numpy as np\n",
     "def cosine_similarity(vec1, vec2):\n",
     "    return np.dot(vec1, vec2) / (np.linalg.norm(vec1) * np.linalg.norm(vec2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's chunk!"
    ]
   },
   {
@@ -279,9 +254,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"blue\">Having orphan chunks like \"No\" isn't great. In practice you probably want some minimum chunk size, but the longer chunks seem to be coherent and topical. Let's try it out as is.\n",
+    "Having orphan chunks like \"No\" isn't great. In practice you probably want some minimum chunk size, but the longer chunks seem to be coherent and topical. Let's try it out as is.\n",
     "\n",
-    "Create a RAG pipeline (I've written my own wrapper but you could also use the stuff_documents_chain). Grab the test data we previously used in class and also copy over the code to run RAGAS. "
+    "Create a RAG pipeline (I've written my own wrapper but you could also use Langchain's stuff_documents_chain). Grab the test data we previously used in class and also copy over the code to run RAGAS. "
    ]
   },
   {
@@ -318,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"blue\">Now for the test set and evaluation code"
+    "Now for the test set and evaluation code"
    ]
   },
   {
@@ -415,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"blue\">Let's compare the results from all our runs.\n",
+    "Let's compare the results from some other runs with the same data set.\n",
     "\n",
     "- Baseline with ada 2: \n",
     "{'faithfulness': 0.7181, 'answer_relevancy': 0.8632, 'context_recall': 0.7539, 'context_precision': 0.6594, 'answer_correctness': 0.5941}\n",
