--- a/Week 8/Day 1/Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
+++ b/Week 8/Day 1/Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 46,
       "metadata": {
         "id": "KOh6w9ud-ff6"
       },
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 47,
       "metadata": {
         "id": "dzPUTCua98b2"
       },
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 48,
       "metadata": {
         "id": "WchaoMEx9j69"
       },
@@ -588,7 +588,7 @@
       "metadata": {},
       "source": [
         "------\n",
-        "## Advanced Build ##"
+        "## Advanced Build: Semantic cache with Redis! ##"
       ]
     },
     {
@@ -621,19 +621,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
         "from uuid import uuid4\n",
-        "from dotenv import load_dotenv\n",
-        "from langchain_openai import OpenAIEmbeddings\n",
-        "from langchain.vectorstores.redis import Redis as RedisVectorStore\n",
         "from langchain.cache import RedisSemanticCache\n",
         "from langchain.globals import set_llm_cache\n",
         "from redis import Redis\n",
-        "from langchain_openai import OpenAI\n",
+        "\n",
         "\n",
         "# Set up Redis (update host and port if your Redis is not running locally)\n",
         "# Make sure to do 'brew services start redis' first if running locally \n",
@@ -644,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -657,16 +653,95 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Function to measure execution time\n",
-        "def timed_completion(prompt):\n",
-        "    start_time = time.time()\n",
-        "    result = llm.invoke(prompt)\n",
-        "    end_time = time.time()\n",
-        "    return result, end_time - start_time"
+        "# Let's still use a qdrant vectorstore\n",
+        "from langchain.vectorstores import Qdrant\n",
+        "\n",
+        "# Typical QDrant Client Set-up\n",
+        "collection_name = f\"pdf_to_parse_{uuid.uuid4()}\"\n",
+        "\n",
+        "client.create_collection(\n",
+        "    collection_name=collection_name,\n",
+        "    vectors_config=VectorParams(size=1536, distance=Distance.COSINE),\n",
+        ")\n",
+        "\n",
+        "# Typical QDrant Vector Store Set-up\n",
+        "new_vectorstore = Qdrant(\n",
+        "    client=client,\n",
+        "    collection_name=collection_name,\n",
+        "    embeddings=core_embeddings)\n",
+        "\n",
+        "new_vectorstore.add_documents(docs)\n",
+        "new_retriever = vectorstore.as_retriever(search_type=\"mmr\", search_kwargs={\"k\": 3})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "new_retrieval_augmented_qa_chain = (\n",
+        "        {\"context\": itemgetter(\"question\") | new_retriever, \"question\": itemgetter(\"question\")}\n",
+        "        | RunnablePassthrough.assign(context=itemgetter(\"context\"))\n",
+        "        | chat_prompt | chat_model\n",
+        "    )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now compare the new redis backed semantic cache to our original version!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "took 0.3911170959472656 seconds\n"
+          ]
+        }
+      ],
+      "source": [
+        "import time\n",
+        "start_time = time.time()\n",
+        "new_retrieval_augmented_qa_chain.invoke({\"question\" : \"Write 50 things about this document!\"})\n",
+        "print (f\"took {time.time()-start_time} seconds\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "took 0.5523152351379395 seconds\n"
+          ]
+        }
+      ],
+      "source": [
+        "start_time = time.time()\n",
+        "retrieval_augmented_qa_chain.invoke({\"question\" : \"Write 50 things about this document!\"})\n",
+        "print (f\"took {time.time()-start_time} seconds\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "About 30% faster! Not bad at all."
       ]
     }
   ],
